# bitsets

./: AUTHORS.md  CHANGES.md  Makefile  README.md  TODO.md  dune-project  header.txt
src/: API.ml  BoundedBitSet.ml  BoundedBitSet.mli  BoundedMini.ml  BoundedMini.mli  DWordBitSet.ml  DWordBitSet.mli  DenseBitVector.ml  DenseBitVector.mli  LeftistHeap.ml  LeftistHeap.mli  Partition.ml  Partition.mli  QWordBitSet.ml  QWordBitSet.mli  SparseBitSet.ml  SparseBitSet.mli  SparseMini.ml  SparseMini.mli  WordBitSet.ml  WordBitSet.mli  WordMini.ml  WordMini.mli  dune  index.mld
test/: Makefile  Prepare.ml  reference.ml  test.ml
test/BoundedBitSet/: test.ml
test/DWordBitSet/: test.ml
test/LeftistHeap/: blog.md  dune  reference.ml  test.ml
test/QWordBitSet/: Makefile  dune  test.ml
test/SparseBitSet/: dune  test.ml
test/WordBitSet/: test.ml
test/setup/: dune  reference.ml  setup.ml
