;; This is a library.
(library
  (name vendored_bitsets)
  (public_name vendored_bitsets)
)

;; Warnings are enabled in development builds and disabled in release builds.
;; Assertions are disabled in release builds.
(env
  (dev     (flags :standard -w @A-4-44-67-70))
  (release (flags :standard -noassert       ))
)
